--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <!-- <link rel="stylesheet" type="text/css" href="css/index.css"> -->
         <title></title>
+
+  <!-- Add to home screen for Safari on iOS -->
+      <meta name="apple-mobile-web-app-capable" content="yes">
+      <meta name="apple-mobile-web-app-status-bar-style" content="black">
+      <meta name="apple-mobile-web-app-title" content="Demo App">
+      <meta name="theme-color" content="#3F51B5">
+      <link rel="apple-touch-icon" href="[[ ./res/images/ui/app_icon_152.png ]]">
+
+      <meta name="msapplication-TileImage" content="[[ ./res/images/ui/app_icon_144.png ]]">
+        <link rel="manifest" href="./manifest.json">
     </head>
     <body style="margin: 0;">
 
