added png favicon

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
       <meta name="msapplication-TileImage" content="[[ ./res/images/ui/app_icon_144.png ]]">
         <link rel="manifest" href="./manifest.json">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="[[ ./res/images/ui/app_icon_32.png ]]">
         <title><!-- @app_build name --></title>
     </head>
     <body style="margin: 0;">
